; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/helper/extr_tls-helper.c_pteTlsThreadInit.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/helper/extr_tls-helper.c_pteTlsThreadInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@maxTlsValues = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @pteTlsThreadInit() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8**, align 8
  %3 = load i32, i32* @maxTlsValues, align 4
  %4 = sext i32 %3 to i64
  %5 = mul i64 %4, 8
  %6 = trunc i64 %5 to i32
  %7 = call i64 @malloc(i32 %6)
  %8 = inttoptr i64 %7 to i8**
  store i8** %8, i8*** %2, align 8
  store i32 0, i32* %1, align 4
  br label %9

9:                                                ; preds = %18, %0
  %10 = load i32, i32* %1, align 4
  %11 = load i32, i32* @maxTlsValues, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %21

13:                                               ; preds = %9
  %14 = load i8**, i8*** %2, align 8
  %15 = load i32, i32* %1, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8*, i8** %14, i64 %16
  store i8* null, i8** %17, align 8
  br label %18

18:                                               ; preds = %13
  %19 = load i32, i32* %1, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %1, align 4
  br label %9

21:                                               ; preds = %9
  %22 = load i8**, i8*** %2, align 8
  %23 = bitcast i8** %22 to i8*
  ret i8* %23
}

declare dso_local i64 @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
